# practical-agent-demo

./: .gitignore  README.md  justfile  pyproject.toml
agents/: .env.example  langgraph.json
agents/browseruse_agent/: agent.py
agents/currency_converter_agent/: agent.py
agents/data_analyst_agent/: agent.py
agents/scraper_agent/: agent.py
agents/scraper_agent/utils/: search_products.py
agents/supervisor_agent/: agent.py
agents/supervisor_with_browseruse_agent/: agent.py
useful/: article.txt  function_call.md
web/: index.html
